data/derived/fa15/progs/unify/prog1781.ml.out
Characters 144-148:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * 'a list
       but an expression was expected of type int list
